--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,14 @@ KIE_AI_DB_PATH=./tasks.db
 # Optional: Callback URL for task completion notifications
 # If set, this will be used as default callback URL for all video generation tasks
 KIE_AI_CALLBACK_URL=https://your-domain.com/api/callback
+
+# Optional: Tool Filtering (v2.0.2+)
+# Enable only specific tools (whitelist, highest priority)
+# KIE_AI_ENABLED_TOOLS=nano_banana_image,veo3_generate_video,suno_generate_music
+
+# Enable tools by category (category filter, medium priority)
+# Available categories: image, video, audio, utility
+# KIE_AI_TOOL_CATEGORIES=image,video
+
+# Disable specific tools (blacklist, lowest priority)
+# KIE_AI_DISABLED_TOOLS=midjourney_generate,runway_aleph_video
